# cookiecutter-python-library

./: LICENSE  Makefile  README.md  cookiecutter.json  make.bat  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: test-bake.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  test_cookies.py
{{cookiecutter.git_repo_name}}/: .coveragerc  Makefile  README.md  make.bat  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
{{cookiecutter.git_repo_name}}/.github/workflows/: publish-to-pypi-uv.yml  publish-to-pypi.yml  test-coverage-lint-uv.yml  test-coverage-lint.yml
{{cookiecutter.git_repo_name}}/containers/: Makefile  make.bat
{{cookiecutter.git_repo_name}}/docs/: conf.py  index.rst
{{cookiecutter.git_repo_name}}/{{cookiecutter.__library_name}}/: __init__.py  version.py  {{cookiecutter.__library_name}}_cli.py
